# craftax-maskedPPO-reward-shaping

./: LICENSE  README.md  action_mask.md  pyproject.toml  rewards.md
src/: arguments.py  evaluation.py  play.py  train.py
src/checkpoints/ppo_gtrxl_2818/: metadata.json
src/checkpoints/ppo_gtrxl_2818/checkpoint_final_7629/: _CHECKPOINT_METADATA  _METADATA  _sharding  manifest.ocdbt
src/checkpoints/ppo_gtrxl_2818/checkpoint_final_7629/array_metadatas/: process_0
src/checkpoints/ppo_gtrxl_2818/checkpoint_final_7629/ocdbt.process_0/: manifest.ocdbt
src/modules/: constants.py
src/modules/algorithms/: base.py  factory.py
src/modules/algorithms/ppo/: __init__.py  gae.py  losses.py  ppo.py  training_utils.py
src/modules/algorithms/shared/: __init__.py  memory.py  rollout.py  training_utils.py  types.py  validation.py
src/modules/environments/: __init__.py  action_mask_wrapper.py  craftax_env.py  reward_shaping_wrapper.py  wrappers.py
src/modules/model/: factory.py  networks.py  transformer.py
