[project]
name = "Craftax-maskedPPO-reward-shaping"
version = "0.1.0"
description = "maskedPPO implementation with reward shaping with GtrXL backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "craftax>=1.5.0",
    "jax[cuda12]>=0.8.1",
    "gymnax>=0.0.9",
    "flax>=0.12.0",
    "distrax>=0.1.7",
    "optax>=0.2.6",
    "imageio>=2.37.0",
    "imageio-ffmpeg>=0.6.0",
    "wandb>=0.23.0",
]