[project]
name = "Craftax-maskedPPO-reward-shaping"
version = "0.1.0"
description = "maskedPPO implementation with reward shaping with GtrXL backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "craftax==1.5.0",
    "jax[cuda13]==0.8.1",
    "gymnax==0.0.9",
    "flax==0.12.0",
    "distrax==0.1.7",
    "optax==0.2.6",
    "imageio==2.37.0",
    "imageio-ffmpeg==0.6.0",
    "wandb==0.23.0",
]

[tool.uv]
constraint-dependencies = [
    "nvidia-cublas<13.2",
    "nvidia-cuda-crt<13.1",
    "nvidia-cuda-cupti<13.1",
    "nvidia-cuda-nvcc<13.1",
    "nvidia-cuda-nvrtc<13.1",
    "nvidia-cuda-runtime<13.1",
    "nvidia-cudnn-cu13<9.17",
    "nvidia-cufft<12.1",
    "nvidia-cusolver<12.1",
    "nvidia-cusparse<12.7",
    "nvidia-nccl-cu13<2.29",
    "nvidia-nvjitlink<13.1",
    "nvidia-nvshmem-cu13<3.5",
    "nvidia-nvvm<13.1",
]